# moonbeam

./: .rustfmt.toml  CONTRIBUTIONS.md  README.md  RELEASE.md  crates.js  safe.md  search-index.js  source-files.js
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  release.yml  version-bump.yml
account/: index.html  sidebar-items.js  struct.AccountId20.html
allychain_staking/: all.html  index.html  sidebar-items.js  struct.InflationInfo.html  struct.Range.html
allychain_staking/inflation/: struct.InflationInfo.html  struct.Range.html
allychain_staking/migrations/: index.html  struct.PurgeStaleStorage.html  struct.RemoveExitQueue.html
allychain_staking/pallet/: enum.Call.html  enum.CandidateBondChange.html  enum.CollatorStatus.html  enum.DelegationChange.html  enum.DelegatorAdded.html  enum.DelegatorStatus.html  enum.Error.html  enum.Event.html  index.html  sidebar-items.js  struct.AllychainBondConfig.html  struct.Bond.html  struct.CandidateBondRequest.html  struct.Collator2.html  struct.CollatorCandidate.html  struct.CollatorSnapshot.html  struct.DelegationRequest.html  struct.Delegator.html  struct.ExitQ.html  struct.GenesisConfig.html  struct.Nominator2.html  struct.Pallet.html  struct.ParachainBondConfig.html  struct.PendingDelegationRequests.html  struct.RoundInfo.html  struct._GeneratedPrefixForStorageAtStake.html  struct._GeneratedPrefixForStorageAwardedPts.html  struct._GeneratedPrefixForStorageExitQueue2.html  struct._GeneratedPrefixForStorageInflationConfig.html  struct._GeneratedPrefixForStoragePoints.html  struct._GeneratedPrefixForStorageStaked.html  trait.Config.html  type.AtStake.html  type.AwardedPts.html  type.BalanceOf.html  type.ExitQueue2.html  type.InflationConfig.html  type.Module.html  type.Points.html  type.Staked.html
allychain_staking/weights/: index.html  sidebar-items.js  struct.SubstrateWeight.html  trait.WeightInfo.html
allychain_staking_precompiles/: all.html  index.html  sidebar-items.js  struct.AllychainStakingWrapper.html  struct.ParachainStakingWrapper.html
client/evm-tracing/: Cargo.toml
client/rpc/debug/: Cargo.toml
client/rpc/trace/: Cargo.toml
core-primitives/: Cargo.toml
docker/: axia-relay.Dockerfile  moonbase-allychain.Dockerfile  moonbeam.Dockerfile
implementors/nimbus_primitives/: trait.CanAuthor.js  trait.EventHandler.js
implementors/pallet_migrations/: trait.Migration.js
implementors/relay_encoder_precompiles/: trait.StakeEncodeCall.js
implementors/scale_info/: trait.TypeInfo.js
implementors/sp_runtime/: trait.BuildModuleGenesisStorage.js
moonbase_runtime/: all.html  enum.Call.html  enum.Event.html  enum.OriginCaller.html  index.html  sidebar-items.js  struct.BlockWeights.html  struct.DefaultAllychainBondReservePercent.html  struct.DefaultParachainBondReservePercent.html  struct.GenesisConfig.html  struct.InflationInfo.html  struct.Range.html  struct.Runtime.html  struct.UnitWeightCost.html  struct.XcmExecutorConfig.html  type.AXIAXcm.html  type.AXIAXcmConfig.html  type.AllModules.html  type.AllModulesWithSystem.html  type.AllPallets.html  type.AllPalletsWithSystem.html  type.AllychainInfo.html  type.AllychainInfoConfig.html  type.AllychainStaking.html  type.AllychainStakingConfig.html  type.AllychainSystem.html  type.ParachainStaking.html  type.ParachainStakingConfig.html  type.SlowAdjustingFeeUpdate.html  type.XcmBarrier.html  type.XcmRouter.html
moonbeam/: index.html
moonbeam-types-bundle/: README.md  index.ts
moonbeam_cli/: enum.Error.html  enum.Subcommand.html  index.html  sidebar-items.js  struct.ExportGenesisStateCommand.html
moonbeam_relay_encoder/: all.html  index.html  sidebar-items.js
moonbeam_runtime/: all.html  enum.Call.html  enum.Event.html  index.html  sidebar-items.js  struct.BlockWeights.html  struct.DefaultAllychainBondReservePercent.html  struct.DefaultParachainBondReservePercent.html  struct.GenesisConfig.html  struct.InflationInfo.html  struct.Range.html  struct.Runtime.html  type.AllModules.html  type.AllModulesWithSystem.html  type.AllPallets.html  type.AllPalletsWithSystem.html  type.AllychainInfo.html  type.AllychainInfoConfig.html  type.AllychainStaking.html  type.AllychainStakingConfig.html  type.AllychainSystem.html  type.ParachainStaking.html  type.ParachainStakingConfig.html  type.SlowAdjustingFeeUpdate.html
moonbeam_service/: fn.new_dev.html  fn.new_partial.html  fn.start_node.html  index.html  sidebar-items.js  trait.RuntimeApiCollection.html
moonriver_runtime/: all.html  enum.Call.html  enum.Event.html  index.html  sidebar-items.js  struct.BlockWeights.html  struct.DefaultAllychainBondReservePercent.html  struct.DefaultParachainBondReservePercent.html  struct.GenesisConfig.html  struct.InflationInfo.html  struct.Range.html  struct.Runtime.html  type.AllModules.html  type.AllModulesWithSystem.html  type.AllPallets.html  type.AllPalletsWithSystem.html  type.AllychainInfo.html  type.AllychainInfoConfig.html  type.AllychainStaking.html  type.AllychainStakingConfig.html  type.AllychainSystem.html  type.ParachainStaking.html  type.ParachainStakingConfig.html  type.SlowAdjustingFeeUpdate.html
node/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: cli.rs  command.rs
node/service/: Cargo.toml
node/service/src/: lib.rs  rpc.rs
node/service/src/chain_spec/: mod.rs  moonbase.rs  moonbeam.rs  moonriver.rs
pallet_migrations/: trait.Migration.html
pallets/allychain-staking/: Cargo.toml  README.md
pallets/allychain-staking/src/: inflation.rs  lib.rs  set.rs  tests.rs  weights.rs
pallets/author-mapping/: Cargo.toml
runtime/relay-encoder/: Cargo.toml
runtime/relay-encoder/src/: axia.rs  kusama.rs  westend.rs
runtime_common/: all.html
scripts/: README.md  _init_var.sh  build-alphanet-relay-image.sh  create-substrate-fork.sh  embed-specs.sh  generate-parachain-specs.sh  generate-relay-specs.sh  run-alphanet-allychain.sh  run-alphanet-parachain.sh  run-betanet-local.sh  run-rococo-local.sh
specs/: README.md
tests/: package-lock.json  package.json
tools/: README.md  launch.ts
xcm_transactor/: index.html
(+203 files in other folders)
