[package]
name = "moonbeam-cli"
authors = ["PureStake"]
edition = "2018"
version = "0.15.1"

[dependencies]
log = "0.4.8"
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1" }
structopt = "0.3.8"

# Moonbeam
cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt", default-features = false }
perf-test = { path = "../perf-test" }
service = { package = "moonbeam-service", path = "../service", default-features = false }

# Substrate
frame-benchmarking-cli = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-cli = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-telemetry = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-tracing = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
try-runtime-cli = { git = "https://github.com/axia-tech/axia-core", branch = "dev", optional = true }

# Cumulus / Nimbus
cumulus-client-cli = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
cumulus-client-service = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
nimbus-primitives = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.12" }

# AXIA
axia-cli = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-allychain = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-service = { git = "https://github.com/axia-tech/axia", branch = "dev" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = [
	"moonbase-native",
	"moonbeam-native",
	"moonriver-native",
	"wasmtime",
	"alphanet-native",
]

alphanet-native = ["axia-service/alphanet-native"]

moonbase-native = ["service/moonbase-native", "alphanet-native"]
moonbeam-native = ["service/moonbeam-native"]
moonriver-native = ["service/moonriver-native"]

moonbase-runtime-benchmarks = ["service/moonbase-runtime-benchmarks"]
runtime-benchmarks = ["service/runtime-benchmarks"]
try-runtime = ["service/try-runtime", "try-runtime-cli"]
wasmtime = ["sc-cli/wasmtime"]
