[package]
name = "moonbeam-service"
authors = ["PureStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.15.1"

[dependencies]
ansi_term = "0.12.1"
async-io = "1.3"
async-trait = "0.1.42"
derive_more = "0.99"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
libsecp256k1 = { version = "0.6", features = ["hmac"] }
log = "0.4"
parking_lot = "0.9.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
sha3 = { version = "0.9", default-features = false }
structopt = "0.3"
tiny-bip39 = { version = "0.8", default-features = false }
tiny-hderive = { version = "0.3.0", default-features = false }
tokio = { version = "1.12.0", features = ["macros", "sync"] }
trie-root = "0.15.2"

# Moonbeam
cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt" }
moonbeam-core-primitives = { path = "../../core-primitives" }
moonbeam-primitives-ext = { path = "../../primitives/ext" }
moonbeam-rpc-debug = { path = "../../client/rpc/debug" }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
moonbeam-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }
moonbeam-rpc-trace = { path = "../../client/rpc/trace" }
moonbeam-rpc-txpool = { path = "../../client/rpc/txpool" }

# Moonbeam runtimes
moonbase-runtime = { path = "../../runtime/moonbase", optional = true }
moonbeam-runtime = { path = "../../runtime/moonbeam", optional = true }
moonriver-runtime = { path = "../../runtime/moonriver", optional = true }

# Substrate
frame-system-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-transaction-payment-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1" }
sc-basic-authorship = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-chain-spec = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-cli = { git = "https://github.com/axia-tech/axia-core", branch = "dev", features = [
	"wasmtime",
] }
sc-client-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-client-db = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus-manual-seal = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-executor = { git = "https://github.com/axia-tech/axia-core", branch = "dev", features = [
	"wasmtime",
] }
sc-finality-grandpa = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-informant = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-network = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-rpc = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-rpc-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-telemetry = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-tracing = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-transaction-pool = { git = "https://github.com/axia-tech/axia-core", branch = "dev", features = [
	"test-helpers",
] }
sc-transaction-pool-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-offchain = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-storage = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-timestamp = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-trie = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
substrate-frame-rpc-system = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# Frontier
ethereum-primitives = { package = "ethereum", version = "0.9.0", default-features = false, features = [
	"with-codec",
] }
fc-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }
fc-db = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }
fc-mapping-sync = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }
fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12", features = [
	"rpc_binary_search_estimate",
] }
fc-rpc-core = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }
fp-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }
fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }
pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }

# Cumulus / Nimbus
cumulus-client-cli = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
cumulus-client-collator = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
cumulus-client-network = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
cumulus-client-service = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12" }
nimbus-consensus = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.12" }
# TODO we should be able to depend only on the primitives crate once we move the inherent data provider there.
nimbus-primitives = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.12" }
pallet-author-inherent = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.12" }

# AXIA
axia-cli = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-allychain = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-service = { git = "https://github.com/axia-tech/axia", branch = "dev" }

# Benchmarking
frame-benchmarking = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
frame-benchmarking-cli = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"

# AXIA dev-dependencies
axia-runtime-common = { git = "https://github.com/axia-tech/axia", branch = "dev" }

# Substrate dev-dependencies
pallet-sudo = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
substrate-test-client = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
substrate-test-runtime-client = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = [
	"axiatest-native",
	"moonbase-native",
	"moonbeam-native",
	"moonriver-native",
	"betanet-native",
	"alphanet-native",
]

axiatest-native = ["axia-cli/axiatest-native", "axia-service/axiatest-native"]
betanet-native = ["axia-cli/betanet-native", "axia-service/betanet-native"]
alphanet-native = ["axia-cli/alphanet-native", "axia-service/alphanet-native"]

moonbase-native = ["moonbase-runtime", "alphanet-native"]
moonbeam-native = ["moonbeam-runtime"]
moonriver-native = ["moonriver-runtime"]

moonbase-native-tracing = ["moonbase-native", "moonbase-runtime/evm-tracing"]

test-spec = []

runtime-benchmarks = [
	"moonbase-native",
	"moonbase-runtime/runtime-benchmarks",
	"moonbeam-native",
	"moonbeam-runtime/runtime-benchmarks",
	"moonriver-native",
	"moonriver-runtime/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
]


moonbase-runtime-benchmarks = [
	"moonbase-native",
	"moonbase-runtime/moonbase-runtime-benchmarks",
	"moonbase-runtime/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
]

try-runtime = ["moonbase-runtime", "moonbase-runtime/try-runtime"]
