[package]
name = "allychain-staking"
authors = ["PureStake"]
description = "allychain staking pallet for collator selection and reward distribution"
edition = "2018"
version = "3.0.0"

[dependencies]
log = "0.4"
serde = { version = "1.0.101", optional = true }

# Substrate
frame-benchmarking = { git = "https://github.com/axia-tech/axia-core", branch = "dev", optional = true, default-features = false }
frame-support = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }

# Nimbus
nimbus-primitives = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.12", default-features = false }

[dev-dependencies]
similar-asserts = "1.1.0"

pallet-balances = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = ["std"]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"nimbus-primitives/std",
	"axia-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
