[package]
name = "moonbeam-relay-encoder"
authors = ["PureStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]

# Moonbeam
relay-encoder-precompiles = { path = "../../precompiles/relay-encoder/", default-features = false }
xcm-primitives = { path = "../../primitives/xcm", default-features = false }

# Substrate
frame-system = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
pallet-staking = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12", default-features = false }

[dev-dependencies]
frame-support = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-proxy = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-utility = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

axiatest-runtime = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-runtime = { git = "https://github.com/axia-tech/axia", branch = "dev" }
betanet-runtime = { git = "https://github.com/axia-tech/axia", branch = "dev" }
alphanet-runtime = { git = "https://github.com/axia-tech/axia", branch = "dev" }

[features]
default = ["std"]
std = [
	"cumulus-primitives-core/std",
	"frame-system/std",
	"pallet-staking/std",
	"axia-scale-codec/std",
	"axia-scale-codec/std",
	"relay-encoder-precompiles/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-primitives/std",
]
