[package]
name = "moonbeam-rpc-trace"
authors = ["PureStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
# Utils
ethereum = { version = "0.9.0", features = ["with-codec"] }
ethereum-types = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"

# Async and logs
futures = { version = "0.3" }
tokio = { version = "1.10", features = ["sync", "time"] }
tracing = "0.1.25"

# Primitives
fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }
moonbeam-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }
sc-utils = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# Client and RPC
fc-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }
fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12", features = [
    "rpc_binary_search_estimate",
] }
fc-rpc-core = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12" }
jsonrpc-core = "18.0.0"
moonbeam-client-evm-tracing = { path = "../../evm-tracing" }
moonbeam-rpc-core-trace = { path = "../../rpc-core/trace" }
moonbeam-rpc-core-types = { path = "../../rpc-core/types" }
sc-client-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-network = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
